added wikiviewer project

--- a/CamperNews/campernews.html
+++ b/CamperNews/campernews.html
@@ -25,7 +25,8 @@
 
 <body>
   <div id="header" class="container">
-    <h3 class="pull-right">CamperNews</h3>
+    <span><h3 class="pull-right">FreeCodeCamp</h3></span>
+    <span><h2>CamperNews</h2></span>
   </div>
   <div id="stories" class="container" ng-controller="NewsController as news">
     <div ng-repeat="columns in news.stories">
