--- a/WikiViewer/wikiviewer.html
+++ b/WikiViewer/wikiviewer.html
@@ -1,51 +1,52 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 
-  <html ng-app="viewer">
-  <head>
-    <meta charset="utf-8">
-    <meta description content="Wikipedia Article Viewer">
-    <!--[if lt IE 9]>
-                  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-              <![endif]-->
+<html ng-app="viewer">
+<head>
+  <meta charset="utf-8">
+  <meta description content="Wikipedia Article Viewer">
+  <!--[if lt IE 9]>
+                <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+            <![endif]-->
 
-    <!--Imports -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <!--Imports -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
-    <script type="text/javascript" src="app.js"></script>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+  <script type="text/javascript" src="app.js"></script>
+  <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
 
-    <title>Wikipedia Viewer | Search and View Your Favorite Articles.</title>
-    <noscript>This application requires JavaScript to function. Please enable scripts in your browser.</noscript>
-  </head>
+  <title>Wikipedia Viewer | Search and View Your Favorite Articles.</title>
+  <noscript>This application requires JavaScript to function. Please enable scripts in your browser.</noscript>
+</head>
 
-  <body>
-    <div id="main" ng-controller="ViewController as view" class="container">
-      <h3 class="pull-right">WikiViewer</h3>
-      <div id="spacer" ng-hide="view.hide"/></div>
-      <div id="search">
-        <form ng-submit="view.getArticles()"/>
-        <input type="text" ng-model="searchText"/>
-        <i class="fa fa-search" ng-click="view.getArticles()"></i>
-      </div>
-      <h3 ng-hide="view.hide">enter an article to begin</h3>
-      <a id="random" href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" ng-hide="view.hide">
-        <i class="fa fa-random"></i>
-      </a>
-      <div id="articles" ng-show="view.show">
-        <ul ng-repeat="article in view.articles">
-          <li>
-            <a target="_blank" href="{{article.page}}">
-              <h2>{{article.title}}</h2>
-              <p>{{article.body}}...</p>
-            </a>
-          </li>
-        </ul>
-      </div>
+<body>
+  <div id="main" ng-controller="ViewController as view" class="container">
+    <h2 class="pull-right header">WikiViewer</h2>
+    <div id="spacer" ng-hide="view.hide"/></div>
+    <div id="search">
+      <form ng-submit="view.getArticles()"/>
+      <input type="text" ng-model="searchText"/>
+      <i class="fa fa-search" ng-click="view.getArticles()"></i>
     </div>
-  </body>
-  </html>
+    <h3 ng-show="view.show">{{view.results}} results.</h3>
+    <h3 ng-hide="view.hide">enter an article to begin</h3>
+    <a id="random" href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" ng-hide="view.hide">
+      <i class="fa fa-random"></i>
+    </a>
+    <div id="articles" ng-show="view.show">
+      <ul ng-repeat="article in view.articles">
+        <li>
+          <a target="_blank" href="{{article.page}}">
+            <h2>{{article.title}}</h2>
+            <p>{{article.body}}...</p>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</body>
+</html>
