--- a/TicTacToe/tictactoe.html
+++ b/TicTacToe/tictactoe.html
@@ -25,25 +25,26 @@
 <body>
   <section id="board"  class="container">
     <div class="row">
-      <div class="btn"></div>
-      <div class="btn"></div>
-      <div class="btn"></div>
+      <div id="0" class="btn tac"></div>
+      <div id="1" class="btn tac"></div>
+      <div id="2" class="btn tac"></div>
     </div>
     <div class="row">
-      <div class="btn"></div>
-      <div class="btn"></div>
-      <div class="btn"></div>
+      <div id="3" class="btn tac"></div>
+      <div id="4" class="btn tac"></div>
+      <div id="5" class="btn tac"></div>
     </div>
     <div class="row">
-      <div class="btn"></div>
-      <div class="btn"></div>
-      <div class="btn"></div>
+      <div id="6" class="btn tac"></div>
+      <div id="7" class="btn tac"></div>
+      <div id="8" class="btn tac"></div>
     </div
   </section>
   <div id="player-select" class="container">
     <span>
       <input id="twoP" type="radio" name="players" checked/><label for="twoP" class="btn">2-Player</label>
       <input id="oneP" type="radio" name="players" /><label for="oneP" class="btn">1-Player</label>
+      <div id="reset" class="btn"><i class="fa fa-refresh"></i></div>
     </span>
   </div>
 </body>
