--- a/TicTacToe/tictactoe.html
+++ b/TicTacToe/tictactoe.html
@@ -23,6 +23,22 @@
 </head>
 
 <body>
+  <div id="begin" class="overlay">
+    <div class="messageBox">
+      <div>TicTacToe!
+        <p>Player One: Choose your mark!</p>
+      </div>
+      <button id="xSelect" type="button" class="btn"><i class="fa fa-times"></i></button>
+      <button id="oSelect" type="button" class="btn"><i class="fa fa-circle-o"></i></button>
+    </div>
+  </div>
+  <div id="end" class="overlay">
+    <div class="messageBox">
+      Game Over!</br>
+      <p id="winnerMessage"></p>
+      <div id="reset" class="btn"><i class="fa fa-refresh"></i></div>
+    </div>
+  </div>
   <section id="board"  class="container">
     <div class="row">
       <div id="0" class="btn tac"></div>
@@ -43,8 +59,8 @@
   <div id="player-select" class="container">
     <span>
       <input id="twoP" type="radio" name="players" checked/><label for="twoP" class="btn">2-Player</label>
-      <input id="oneP" type="radio" name="players" /><label for="oneP" class="btn">1-Player</label>
-      <div id="reset" class="btn"><i class="fa fa-refresh"></i></div>
+      <!-- <input id="oneP" type="radio" name="players" /><label for="oneP" class="btn">1-Player</label> -->
+      <div id="restart" class="btn"><i class="fa fa-refresh"></i></div>
     </span>
   </div>
 </body>
