updated tictactoe a bit

--- a/SimonGame/simongame.html
+++ b/SimonGame/simongame.html
@@ -22,6 +22,23 @@
 </head>
 
 <body>
-
+  <div id="game" class="container">
+    <div class="row">
+      <div id="green" class="tile btn"></div>
+      <div id="red" class="tile btn"></div>
+      <div id="purple" class="tile btn"></div>
+    </div>
+    <div class="row">
+      <div id="orange" class="tile btn"></div>
+      <div id="blue" class="tile btn"></div>
+    </div>
+  </div>
+  <div id="controller" class="container">
+    <label>Score:</label>
+    <input id="score" type="text" disabled/>
+    </br>
+    <i id="start" class="fa fa-power-off btn"></i>
+    <i id="reset" class="fa fa-refresh btn"></i>
+  </div>
 </body>
 </html>
