refractor and add AI elements to TicTacToe

--- a/TicTacToe/tictactoe.html
+++ b/TicTacToe/tictactoe.html
@@ -32,6 +32,15 @@
       <button id="oSelect" type="button" class="btn"><i class="fa fa-circle-o"></i></button>
     </div>
   </div>
+  <div id="begin-select" class="overlay">
+      <div class="messageBox">
+        <div>Players
+          <p>Is the other player a friend or the AI?</p>
+        </div>
+        <button id="twoPlayer" type="button" class="btn"><i class="fa fa-user"></i></button>
+        <button id="singlePlayer" type="button" class="btn"><i class="fa fa-desktop"></i></button>
+      </div>
+  </div>
   <div id="end" class="overlay">
     <div class="messageBox">
       Game Over!</br>
@@ -59,7 +68,7 @@
   <div id="player-select" class="container">
     <span>
       <input id="twoP" type="radio" name="players" checked/><label for="twoP" class="btn">2-Player</label>
-      <!-- <input id="oneP" type="radio" name="players" /><label for="oneP" class="btn">1-Player</label> -->
+      <input id="oneP" type="radio" name="players" /><label for="oneP" class="btn">1-Player</label>
       <div id="restart" class="btn"><i class="fa fa-refresh"></i></div>
     </span>
   </div>
