minor code adjustments to tictactoe

--- a/TicTacToe/tictactoe.html
+++ b/TicTacToe/tictactoe.html
@@ -67,8 +67,9 @@
   </section>
   <div id="player-select" class="container">
     <span>
-      <input id="twoP" type="radio" name="players" checked/><label for="twoP" class="btn">2-Player</label>
+<!--  <input id="twoP" type="radio" name="players" checked/><label for="twoP" class="btn">2-Player</label>
       <input id="oneP" type="radio" name="players" /><label for="oneP" class="btn">1-Player</label>
+-->
       <div id="restart" class="btn"><i class="fa fa-refresh"></i></div>
     </span>
   </div>
